Rover State list APIs was created.
